--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<div>
+  <button class="bg-main">
+    <%= link_to 'ADD CATEGORY', new_category_path %>
+  </button>
+
+  <div>
+    <% @categories.each do |category| %>
+      <%= render "categories/category_display", category: category %>
+    <% end %>
+  </div>
+  
+</div>
