--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Transactions#index</h1>
-<p>Find me in app/views/transactions/index.html.erb</p>
+<%= render "layouts/home_button" %>
+<%= render "layouts/splash_button" %>
+
+
+  <%= @category.name %>
+  <%= @category.total_transactions %>
+
+
+
+<button class="bg-main">
+  <%= link_to 'ADD TRANSACTION', new_category_transaction_path %>
+</button>
+
+<div>
+  <% @category.entities.each do |transaction| %>
+    <%= render "transaction/transaction_display", transaction: transaction %>
+  <% end %>
+</div>
