--- a/app/views/layouts/_home_button.html.erb
+++ b/app/views/layouts/_home_button.html.erb
@@ -1,3 +1,3 @@
-<button class="bg-main">
-  <%= link_to '<-', categories_path %>
-</button>
+<a href="<%= categories_path %>" class="w-2">
+ <i class="fa fa-chevron-left"></i>
+</a>
