--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,37 +1,38 @@
-<%= render "layouts/splash_button" %>
-<div>
-  <h2>Sign up</h2>
+<% flash.each do |type, msg| %>
+  <div class="bg-second flex flex-col p-1 w-[100%]">
+    <div>
+      <%= msg %>
+    </div>
+  </div>
+<% end %>
 
+<div class="flex flex-col h-screen bg-gray">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
-
-    <div class="field">
-      <%= f.label :name %><br />
-      <%= f.text_field :name %>
+    <div class="bg-main flex items-center justify-between p-4 mb-5 text-white">
+      <%= render "layouts/splash_button" %>
+      <h2>Register</h2>
+      <div class="actions">
+        <%= f.submit "Next" %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    </div>
+    <div class="bg-white divide-y divide-slate-200 text-text">
+      <div class="field">
+        <%= f.text_field :name, placeholder: "Full name", required: true %>
+      </div>
 
-    <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
-    </div>
+      <div class="field">
+        <%= f.email_field :email, placeholder: "Email", autofocus: true, autocomplete: "email", required: true %>
+      </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
+      <div class="field">
+        <%= f.password_field :password, placeholder: "Password", autocomplete: "new-password", required: true %>
+      </div>
 
-    <div class="actions">
-      <%= f.submit "Sign up" %>
+      <div class="field">
+        <%= f.password_field :password_confirmation, placeholder: "Confirm password", autocomplete: "new-password", required: true %>
+      </div>
     </div>
   <% end %>
-
-  <%= render "devise/shared/links" %>
 </div>
