--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,12 @@
-<div class="flex h-screen">
-  <div class="m-auto flex flex-col">
-    <h3 class="font-lato">Aposor</h3>
-    <button class="bg-main">
+<div class="flex flex-col h-screen bg-gray">
+  <div class="flex flex-col justify-center items-center h-[80%]">
+    <h3 class="font-lato text-text text-4xl">Aposor</h3>
+  </div>
+  <div class="flex flex-col h-[20%] p-4">
+    <button class="bg-main text-white h-10">
       <%= link_to 'LOG IN', new_user_session_path %>
     </button>
-    <button class="">
+    <button class="text-text h-10">
       <%= link_to 'SIGN UP', new_user_registration_path %>
     </button>
   </div>
