--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,13 +1,10 @@
 <div>
+<a href="<%= category_transactions_path(@category_id) %>">
+<-
+</a>
   <h1>Add Transaction</h1>
   <div>
     <%= form_with model: transaction, url: category_transactions_path, method: :post, local: true, scope: :transaction do |f|%>
-      <select name="category[category_id]" required >
-        <% @categories.each do |category| %>
-            <option value="<%= category.id %>"><%= category.name %></option>
-        <% end %>
-      </select>
-
       <div>
         <%= f.label :name %><br>
         <%= f.text_field :name, required: true %>
@@ -15,7 +12,7 @@
 
       <div>
         <%= f.label :amount %><br>
-        <%= f.number_field :amount, value:1, min: 0, step: 0.1, required: true %>
+        <%= f.number_field :amount, value:1, min: 0, step: 0.01, required: true %>
       </div>
       
       <%= f.submit "Add" %>
