--- a/app/views/categories/_category_display.html.erb
+++ b/app/views/categories/_category_display.html.erb
@@ -1,7 +1,7 @@
-<a href="<%= category_transactions_path(category) %>" class="flex bg-white w-[90%] h-16 items-center p-1 gap-1">
-  <div class="w-[20%]">
+<a href="<%= category_transactions_path(category) %>" class="flex bg-white w-[90%] h-16 items-center p-1 gap-1 text-sm">
+  <div class="w-[20%] max-h-15">
     <% if category.icon %>
-      <img class="object-contain" src="<%= category.icon %>" alt=<%= category.name %> onerror="this.onerror=null;this.src='https://img.favpng.com/23/20/7/computer-icons-information-png-favpng-g8DtjAPPNhyaU9EdjHQJRnV97.jpg';"  />
+      <img class="object-contain w-20 h-15" src="<%= category.icon %>" alt=<%= category.name %> onerror="this.onerror=null;this.src='https://img.favpng.com/23/20/7/computer-icons-information-png-favpng-g8DtjAPPNhyaU9EdjHQJRnV97.jpg';"  />
     <% end %>
   </div>
   <h3 class="w-[50%]">
