--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,6 +1,9 @@
+/* stylelint-disable */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @import "font-awesome";
 
 /*
@@ -12,3 +15,5 @@
 }
 
 */
+
+/* stylelint-enable */
