Fix error message handling

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,8 @@
 <div class="flex flex-col h-screen bg-gray">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="bg-second flex flex-col p-1 w-[100%]">
+      <%= render "devise/shared/error_messages", resource: resource %>
+    </div>
     <div class="bg-main flex items-center justify-between p-4 mb-5 text-white">
       <%= render "layouts/splash_button" %>
       <h2>Register</h2>
